templates/service.yaml
apiVersion: v1

kind: Service

metadata:

  name: golang-mathapp-service

spec:

 selector:
  app: golang-mathapp
 ports;
 - protocol: TCP
 port: 8010
 targetPort: 8010
 type: ClusterIP
